MATP-966 Work on market data UI

--- a/webui/webui-package/src/main/webapp/VAADIN/themes/mytheme/styles.scss
+++ b/webui/webui-package/src/main/webapp/VAADIN/themes/mytheme/styles.scss
@@ -1,2 +1,5 @@
-@import url(../reindeer/styles.css);
+@import url(../chameleon/styles.css);
 
+.layout-with-border {
+    border: 10px solid red;
+}
